--- a/packages/alacritty.yml
+++ b/packages/alacritty.yml
@@ -1,31 +1,31 @@
 window:
-  opacity: 0.8
+  opacity: 0.7
 
-# Campbell (Windows 10 default)
+# Colours (Monokai Charcoal)
 colors:
-  # Default colors
+  # Default Colours
   primary:
-    background: '0x0c0c0c'
-    foreground: '0xcccccc'
+    background: '#000000'
+    foreground: '#FFFFFF'
 
-  # Normal colors
+  # Normal Colours
   normal:
-    black:      '0x0c0c0c'
-    red:        '0xc50f1f'
-    green:      '0x13a10e'
-    yellow:     '0xc19c00'
-    blue:       '0x0037da'
-    magenta:    '0x881798'
-    cyan:       '0x3a96dd'
-    white:      '0xcccccc'
+    black:   '#1a1a1a'
+    red:     '#f4005f'
+    green:   '#98e024'
+    yellow:  '#fa8419'
+    blue:    '#9d65ff'
+    magenta: '#f4005f'
+    cyan:    '#58d1eb'
+    white:   '#c4c5b5'
 
-  # Bright colors
+  # Bright Colours
   bright:
-    black:      '0x767676'
-    red:        '0xe74856'
-    green:      '0x16c60c'
-    yellow:     '0xf9f1a5'
-    blue:       '0x3b78ff'
-    magenta:    '0xb4009e'
-    cyan:       '0x61d6d6'
-    white:      '0xf2f2f2'
+    black:   '#625e4c'
+    red:     '#f4005f'
+    green:   '#98e024'
+    yellow:  '#e0d561'
+    blue:    '#9d65ff'
+    magenta: '#f4005f'
+    cyan:    '#58d1eb'
+    white:   '#f6f6ef'
