change alacritty colors

--- a/packages/alacritty.yml
+++ b/packages/alacritty.yml
@@ -1,31 +1,45 @@
 window:
-  opacity: 0.7
+  padding:
+    x: 2
+    y: 0
+  opacity: 0.80
 
-# Colours (Monokai Charcoal)
+scrolling:
+  history: 1000
+  multiplier: 3
+
 colors:
-  # Default Colours
+  # Default colors
   primary:
-    background: '#000000'
-    foreground: '#FFFFFF'
+    background: "#000000"
+    foreground: "#d5c4a1"
 
-  # Normal Colours
+  # Colors the cursor will use if `custom_cursor_colors` is true
+  cursor:
+    text: "#1d2021"
+    cursor: "#928374"
+
+  # Normal colors
   normal:
-    black:   '#1a1a1a'
-    red:     '#f4005f'
-    green:   '#98e024'
-    yellow:  '#fa8419'
-    blue:    '#9d65ff'
-    magenta: '#f4005f'
-    cyan:    '#58d1eb'
-    white:   '#c4c5b5'
+    black: "#1d2021"
+    red: "#cc241d"
+    green: "#98971a"
+    yellow: "#d79921"
+    blue: "#458588"
+    magenta: "#b16286"
+    cyan: "#689d6a"
+    white: "#a89984"
 
-  # Bright Colours
+  # Bright colors
   bright:
-    black:   '#625e4c'
-    red:     '#f4005f'
-    green:   '#98e024'
-    yellow:  '#e0d561'
-    blue:    '#9d65ff'
-    magenta: '#f4005f'
-    cyan:    '#58d1eb'
-    white:   '#f6f6ef'
+    black: "#665c54"
+    red: "#fb4934"
+    green: "#b8bb26"
+    yellow: "#fabd2f"
+    blue: "#83a598"
+    magenta: "#d3869b"
+    cyan: "#8ec07c"
+    white: "#bdae93"
+
+  size: 12
+draw_bold_text_with_bright_colors: true
