--- a/packages/polybar.ini
+++ b/packages/polybar.ini
@@ -1,49 +1,20 @@
-;==========================================================
-;
-;
-;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
-;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
-;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
-;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
-;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
-;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
+[colors]
+background= #1A1B26
+foreground= #D4BFFF
 
-;==========================================================
-
-;==========================================================
-[bar/i3_bar]
-width = 100%
-height = 23pt
-radius = 0
-dpi = 100
-background = ${gruvbox.black}
-foreground = ${gruvbox.cream}
-line-size = 0
-border-size = 2pt
-border-color = ${gruvbox.cream}
-module-margin = 0
-padding-left=0pt
-padding-right=0pt
-separator ="."
-separator-foreground = ${gruvbox.transparent}
-
-font-0 = "Roboto condensed:size=11:weight=bold;2"
-font-1 = Font Awesome 6 Free:pixelsize=11;2
-font-2 = Font Awesome 6 Free Solid:pixelsize=11;2
-font-3 = Font Awesome 6 Brands:pixelsize=11;2
-font-4 = "FiraCode Nerd Font Mono:size=23:weight=bold;5"
-
-; Language Fonts
-font-5 = "Noto Sans Bengali:size=11:weight=bold;1"
-font-6 = "Noto Sans JP:size=11:weight=bold;1"
-font-7 = "Noto Sans Arabic:size=11:weight=bold;1"
-
-modules-left = rofi i3 xwindow
-modules-right = filesystem cpu temp memory pulseaudio time tray
-cursor-click = pointer
-;cursor-scroll = ns-resize
-enable-ipc = true
-wm-restack = i3
+black= #171421
+red= #E66D76
+green= #5EDEA3
+yellow= #EFAB73
+blue= #73A3DE
+purple= #D06FE8
+cyan= #75DBEB
+white= #7a7e85
+gray = #6E6C72
+brown = #EB867C
+orange = #F3D175
+teal = #72A9ED
+pink = #E26FEF
 
 
 
@@ -51,215 +22,403 @@ wm-restack = i3
 
 
 
+[bar/top]
+monitor = ${env:MONITOR}
+
+fixed-center = true
+bottom = false
+
+height = 24
+width = 100%:-12
+offset-x = 6
+offset-y = 6
+
+radius = 6px
+
+foreground = ${colors.foreground}
+background = ${colors.background}
+border-color = ${colors.background}
+border-size = 4
+
+line-size = 2
+overline-size = 2
+overline-color = ${colors.background}
+underline-size = 2
+underline-color = ${colors.background}
+
+font-0 = Iosevka Nerd Font:pixelsize=16 ;3
+font-1 = Iosevka Nerd Font Mono:pixelsize=24 ;4
+font-2 = Font Awesome 6 Free Solid:pixelsize=9 ;4
+font-3 = Iosevka Nerd Font Mono:pixelsize=24 ;3
+font-4 = JetbrainsMono Nerd Font Mono:pixelsize=18 ;4
+
+module-margin-right = 0
+module-margin-left = 0
+
+modules-left = workspaces
+modules-right = battery cpu memory net-down-speed time
 
 
-;==========================================================
-[module/rofi]
-type=custom/text
-content=""
-content-padding=3
-click-left= exec rofi -show drun -disable-history -show-icons
-click-right= exec ~/.config/i3/scripts/power.sh
-content-foreground=${gruvbox.cream}
-content-background=${gruvbox.grey}
 
-;==========================================================
-[module/ss]
-type=custom/text
-content="  "
-content-foreground=${gruvbox.black}
 
-;==========================================================
-[module/i3]
-type = internal/i3
-enable-scroll = false
-show-urgent = true
-strip-wsnumbers = true
-index-sort = true
+
+[bar/bottom]
+monitor = ${env:MONITOR}
+
+fixed-center = true
+bottom = true
+
+height = 24
+width = 100%:-12
+offset-x = 6
+offset-y = 6
+
+radius = 6px
+
+foreground = ${colors.foreground}
+background = ${colors.background}
+border-color = ${colors.background}
+border-size = 4
+
+line-size = 2
+overline-size = 2
+overline-color = ${colors.background}
+underline-size = 2
+underline-color = ${colors.background}
+
+font-0 = MesloLGL Nerd Font:pixelsize=8 ;3
+font-1 = MesloLGL Nerd Font:pixelsize=9 ;4
+font-2 = Font Awesome 6 Free Solid:pixelsize=9 ;4
+font-3 = Iosevka Nerd Font Mono:pixelsize=12 ;3
+font-4 = JetbrainsMono Nerd Font Mono:pixelsize=18 ;4
+
+module-margin-right = 0
+module-margin-left = 0
+
+modules-left = mediacontrol mediatitle 
+modules-center = windowtitle
+modules-right = lyrics mediavisualizer volume
+
+
+
+
+
+
+
+
+
+
+
+[module/workspaces]
+type = internal/xworkspaces
+
+pin-workspaces = true
+
 enable-click = true
-fuzzy-match = true
+enable-scroll = false
 
-ws-icon-0 = 1;
-ws-icon-1 = 2;
-ws-icon-2 = 3;
-ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-5 = 6;󰭛
-ws-icon-6 = 7;
-ws-icon-7 = 8;󰚀
+icon-default = ⏺
 
-format = <label-state> <label-mode>
-label-mode = %mode%
-label-mode-padding = 1
-label-mode-background = ${gruvbox.red} 
-label-mode-foreground = ${gruvbox.white}
+content-padding = 1
 
-label-focused = %icon%
-label-focused-font = 5
-label-focused-foreground = ${gruvbox.orange}
-label-focused-padding = 1
+format = <label-state>
+format-font = 4
 
-label-unfocused = %icon%
-label-unfocused-font = 5
-label-unfocused-foreground = ${gruvbox.cream}
-label-unfocused-padding = 1
+label-active = 
+label-active-padding = 1
+label-active-foreground = ${colors.yellow}
 
-label-visible = %icon%
-label-visible-padding = 1
+label-occupied = %icon%
+label-occupied-padding = 1
+label-occupied-foreground = ${colors.blue}
+
+label-empty = %icon%
+label-empty-padding = 1
+label-empty-foreground = #bb222222
 
 label-urgent = %icon%
-label-urgent-font = 5
-label-urgent-foreground = ${gruvbox.red-alt}
 label-urgent-padding = 1
+label-urgent-foreground = ${colors.red}
 
-label-separator = " "
-label-separator-padding = 1
-label-separator-foreground = ${gruvbox.transparent}
 
-;==========================================================
-[module/xwindow]
-type = internal/xwindow
-format-prefix="[  ]"
-format-margin=2
-format-prefix-foreground=${gruvbox.cream}
 
-label = %title%
-label-maxlen=60
-label-foreground = ${gruvbox.cream}
-label-padding-left=4
-label-padding-right=4
 
-;==========================================================
-[module/time]
-type = internal/date
-interval = 1
-format-prefix = "[    ]"
-format-prefix-foreground=${gruvbox.cream}
 
-date = %a  %d %b  %H:%M:%S 
-label =%date% 
-label-foreground = ${gruvbox.cream}
-label-padding-left=2
-label-padding-right=2
 
-;==========================================================
-[module/filesystem]
-type = internal/fs
-interval = 2
-mount-0 = /
-format-mounted-prefix = "[    ]"
-format-mounted-prefix-foreground = ${gruvbox.cream}
 
-label-mounted = %free%
-label-unmounted =  %mountpoint% not mounted
-label-mounted-foreground = ${gruvbox.cream}
-label-mounted-padding-left=2
-label-mounted-padding-right=2
 
-;==========================================================
+
+[module/battery]
+type = internal/battery
+
+battery = BAT0
+adapter = ADP0
+
+full-at = 100
+
+time-format = %H:%M:%S
+poll-interval = 2
+
+format-charging =  <label-charging>
+format-charging-foreground = ${colors.blue}
+format-charging-padding = 1
+format-charging-margin = 1
+
+label-charging = %percentage%%
+label-charging-padding-left = 1
+label-charging-font = 1
+
+format-discharging = <ramp-capacity><label-discharging>
+format-discharging-foreground = ${colors.blue}
+format-discharging-padding = 1
+format-discharging-margin = 1
+
+label-discharging = %percentage%%
+label-discharging-padding-left = 1
+label-discharging-font = 1
+
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+ramp-capacity-font = 3
+
+format-full = <ramp-capacity><label-full>
+format-full-foreground = ${colors.blue}
+format-full-padding = 1
+format-full-margin = 1
+
+label-full = %percentage%%
+label-full-padding-left = 1
+label-full-font = 1
+
+
+
+
+
+
+
+
+
 [module/cpu]
 type = internal/cpu
 interval = 1
-format-prefix = "[    ]"
-format-prefix-foreground = ${gruvbox.cream}
+
+format = <label>
+format-foreground = ${colors.blue}
+; format-padding = 1
+format-margin = 1
+
+format-prefix = "󰍛"
+format-prefix-font = 3 
+format-prefix-foreground = ${colors.blue}
+; format-prefix-background = ${colors.green}
+; format-prefix-padding = 1 
 
 label = %percentage%%
-label-foreground = ${gruvbox.cream}
-label-padding-left=2
-label-padding-right=2
+label-font = 1
+; label-foreground = ${colors.green}
+; label-background = #bb222222
+label-padding = 1 
 
-;==========================================================
-[module/temp]
-type = internal/temperature
-interval = 0.5
-thermal-zone = 0
-hwmon-path = /sys/class/hwmon/hwmon1/temp1_input
-base-temperature = 20 
-warn-temperature = 70
-units = true
 
-format =<label>
-format-prefix = "[    ]"
-format-prefix-foreground= ${gruvbox.cream}
 
-label = %temperature-c%
-label-foreground = ${gruvbox.cream}
-label-padding-left=2
-label-padding-right=2
 
-format-warn-prefix = "  [    ]"
-format-warn-prefix-foreground= ${gruvbox.red-alt}
 
-label-warn = %temperature-c%
-label-warn-foreground = ${gruvbox.red-alt}
-label-warn-padding-left=2
-label-warn-padding-right=2
 
-;==========================================================
+
 [module/memory]
 type = internal/memory
-interval = 1 
-format-prefix = "[    ]"
-format-prefix-foreground = ${gruvbox.cream}
+interval = 1
+
+format = <label>
+format-foreground = ${colors.blue}
+; format-padding = 1
+format-margin = 1
+
+format-prefix = "󰘚"
+format-prefix-font = 3
 
 label = %mb_used%
-label-foreground = ${gruvbox.cream}
-label-padding-left=2
-label-padding-right=2
-
-;==========================================================
-[module/pulseaudio]
-type = internal/pulseaudio
-format-volume-prefix = "[    ]"
-format-volume-prefix-foreground = ${gruvbox.cream}
-format-volume = <label-volume>
-
-label-volume = %percentage%%
-label-volume-foreground= ${gruvbox.cream}
-label-volume-padding-left=2
-label-volume-padding-right=2
-
-label-muted = [  ]  muted
-label-muted-foreground = ${gruvbox.red}
-label-muted-padding=2
-
-;==========================================================
-[module/tray]
-type=internal/tray
-format = <tray>
-tray-spacing= 8px
-format-padding=5px
-format-background=${gruvbox.grey}
-tray-background = ${gruvbox.grey}
-
-;==========================================================
-[settings]
-screenchange-reload = true
-pseudo-transparency = true
+label-font = 1
+label-padding = 1
 
 
-; vim:ft=dosini
-;
-;
-;
-;
-[gruvbox]
-black= #000000
-dark= #0f0f0f
-disabled= #504945
-red= #ea6962
-red-alt= #b22222
-orange= #fe8019
-orange-mat=#e78a4e
-yellow= #fabd2f
-yellow-mat=#d8a657
-green= #b8bb26
-aqua= #8ec07c
-blue= #458588
-blue-alt=#83a598
-grey= #504945
-dark-grey=#1d2021
-cream= #ebdbb2
-white= #FFFFFF
-transparent= #00000000
-Stransparent= #CC000000
+
+
+
+
+[module/net-down-speed]
+type = internal/network
+interface-type = wireless
+
+format-connected = <label-connected>
+format-connected-margin = 1
+
+format-connected-prefix = ""
+format-connected-prefix-font = 3
+format-connected-prefix-foreground = ${colors.background}
+format-connected-prefix-background = ${colors.purple}
+format-connected-prefix-padding = 1
+
+label-connected = "%downspeed:08%"
+label-connected-font = 1
+label-connected-foreground = ${colors.purple}
+label-connected-padding = 1
+
+
+
+
+
+
+
+
+[module/time]
+interval = 1.0
+type = internal/date
+
+format = <label>
+format-margin-left = 1
+
+format-prefix = ""
+format-prefix-font = 3
+format-prefix-foreground = ${colors.background}
+format-prefix-background = ${colors.red}
+format-prefix-padding = 2
+
+label = %time% %date%
+label-font = 1
+label-foreground = ${colors.red}
+label-background = #bb222222
+label-padding = 2
+
+time = %H:%M:%S 
+date = %m-%d
+
+
+
+
+
+
+
+
+
+[module/windowtitle]
+type = internal/xwindow
+format-font = 1
+format-foreground = ${colors.green}
+
+
+
+
+
+
+
+
+
+[module/mediacontrol]
+type= custom/script
+interval = 1
+
+format = <label>
+format-foreground = ${colors.yellow}
+format-font = 2
+format-padding = 1
+
+label = %output%
+label-padding = 0
+
+exec = ~/.config/polybar/scripts/mediacontrol.sh
+
+
+
+
+
+
+
+
+[module/mediatitle]
+type = custom/script
+interval = 1
+tail = true
+
+format = <label>
+format-foreground = ${colors.yellow}
+format-font = 1
+format-padding = 1
+
+label = %output%
+
+exec = ~/.config/polybar/scripts/mediatitle.sh
+scroll-up = playerctl position 5+ &
+scroll-down = playerctl position 5- &
+
+
+
+
+
+
+
+
+[module/mediavisualizer]
+type = custom/script
+interval = 1
+tail = true
+
+format = <label>
+format-font = 3
+format-foreground = ${colors.yellow}
+format-padding = 1
+
+label = %output%
+
+exec = ~/.config/polybar/scripts/mediavisualizer.sh
+
+
+
+
+
+
+
+[module/lyrics]
+type = custom/script
+interval = 1
+tail = true
+
+format = <label>
+format-font = 1
+format-foreground = ${colors.yellow}
+format-padding = 1
+
+label = %output%
+
+exec = sptlrx pipe
+
+
+
+
+
+
+
+[module/volume]
+type = custom/script
+exec = echo $(amixer get Master | grep -E -o '([0-9]{1,3})%' | cut -d % -f 1 | datamash mean 1)%
+
+interval = 1
+
+format = <label>
+format-foreground = ${colors.yellow}
+format-padding = 2
+
+format-prefix = ""
+format-prefix-font = 2
+
+label = %output%
+label-padding-left = 1
+label-font = 1
+
+click-left = amixer set Master toggle &
+scroll-up = amixer set 'Master' 1%+ &
+scroll-down = amixer set 'Master' 1%- &
+
