--- a/packages/polybar/polybar.ini
+++ b/packages/polybar/polybar.ini
@@ -46,7 +46,7 @@ overline-color = ${colors.background}
 underline-size = 2
 underline-color = ${colors.background}
 
-font-0 = Iosevka Nerd Font:pixelsize=16 ;3
+font-0 = Scientifica:pixelsize=16 ;2
 font-1 = Iosevka Nerd Font Mono:pixelsize=24 ;4
 font-2 = Font Awesome 6 Free Solid:pixelsize=9 ;4
 font-3 = Iosevka Nerd Font Mono:pixelsize=24 ;3
@@ -56,48 +56,12 @@ module-margin-right = 0
 module-margin-left = 0
 
 modules-left = workspaces
-modules-right = battery cpu memory net-down-speed time
+modules-right = cpu memory net-down-speed battery time
 
 
-
-
-
-[bar/bottom]
-monitor = ${env:MONITOR}
-
-fixed-center = true
-bottom = true
-
-height = 24
-width = 100%:-12
-offset-x = 6
-offset-y = 6
-
-radius = 6px
-
-foreground = ${colors.foreground}
-background = ${colors.background}
-border-color = ${colors.background}
-border-size = 4
-
-line-size = 2
-overline-size = 2
-overline-color = ${colors.background}
-underline-size = 2
-underline-color = ${colors.background}
-
-font-0 = MesloLGL Nerd Font:pixelsize=8 ;3
-font-1 = MesloLGL Nerd Font:pixelsize=9 ;4
-font-2 = Font Awesome 6 Free Solid:pixelsize=9 ;4
-font-3 = Iosevka Nerd Font Mono:pixelsize=12 ;3
-font-4 = JetbrainsMono Nerd Font Mono:pixelsize=18 ;4
-
-module-margin-right = 0
-module-margin-left = 0
-
-modules-left = mediacontrol mediatitle 
-modules-center = windowtitle
-modules-right = lyrics mediavisualizer volume
+; modules-left = 
+modules-center = windowtitle 
+; modules-right = lyrics mediavisualizer volume mediacontrol mediatitle 
 
 
 
@@ -160,7 +124,8 @@ time-format = %H:%M:%S
 poll-interval = 2
 
 format-charging =  <label-charging>
-format-charging-foreground = ${colors.blue}
+format-charging-foreground = ${colors.background}
+format-charging-background = ${colors.green}
 format-charging-padding = 1
 format-charging-margin = 1
 
@@ -169,7 +134,8 @@ label-charging-padding-left = 1
 label-charging-font = 1
 
 format-discharging = <ramp-capacity><label-discharging>
-format-discharging-foreground = ${colors.blue}
+format-discharging-foreground = ${colors.background}
+format-discharging-background = ${colors.green}
 format-discharging-padding = 1
 format-discharging-margin = 1
 
@@ -185,7 +151,8 @@ ramp-capacity-4 = 
 ramp-capacity-font = 3
 
 format-full = <ramp-capacity><label-full>
-format-full-foreground = ${colors.blue}
+format-full-foreground = ${colors.background}
+format-full-background = ${colors.green}
 format-full-padding = 1
 format-full-margin = 1
 
@@ -207,19 +174,14 @@ interval = 1
 
 format = <label>
 format-foreground = ${colors.blue}
-; format-padding = 1
 format-margin = 1
 
 format-prefix = "󰍛"
 format-prefix-font = 3 
 format-prefix-foreground = ${colors.blue}
-; format-prefix-background = ${colors.green}
-; format-prefix-padding = 1 
 
 label = %percentage%%
 label-font = 1
-; label-foreground = ${colors.green}
-; label-background = #bb222222
 label-padding = 1 
 
 
@@ -234,7 +196,6 @@ interval = 1
 
 format = <label>
 format-foreground = ${colors.blue}
-; format-padding = 1
 format-margin = 1
 
 format-prefix = "󰘚"
@@ -254,17 +215,15 @@ type = internal/network
 interface-type = wireless
 
 format-connected = <label-connected>
+format-connected-foreground = ${colors.blue}
 format-connected-margin = 1
 
 format-connected-prefix = ""
 format-connected-prefix-font = 3
-format-connected-prefix-foreground = ${colors.background}
-format-connected-prefix-background = ${colors.purple}
-format-connected-prefix-padding = 1
+format-connected-srefix-padding = 1
 
-label-connected = "%downspeed:08%"
+label-connected = "%essid%"
 label-connected-font = 1
-label-connected-foreground = ${colors.purple}
 label-connected-padding = 1
 
 
@@ -329,7 +288,7 @@ format-padding = 1
 label = %output%
 label-padding = 0
 
-exec = ~/.config/polybar/scripts/mediacontrol.sh
+exec = /etc/nixos/packages/polybar/mediacontrol.sh
 
 
 
@@ -350,7 +309,7 @@ format-padding = 1
 
 label = %output%
 
-exec = ~/.config/polybar/scripts/mediatitle.sh
+exec = /etc/nixos/packages/polybar/mediatitle.sh
 scroll-up = playerctl position 5+ &
 scroll-down = playerctl position 5- &
 
