--- a/packages/polybar/polybar.ini
+++ b/packages/polybar/polybar.ini
@@ -81,27 +81,31 @@ pin-workspaces = true
 enable-click = true
 enable-scroll = false
 
-icon-default = ⏺
+; icon-default = ⏺
 
 content-padding = 1
 
 format = <label-state>
 format-font = 4
 
-label-active = 
+; label-active = 
 label-active-padding = 1
+label-active-font = 1
 label-active-foreground = ${colors.yellow}
 
-label-occupied = %icon%
+; label-occupied = %icon%
 label-occupied-padding = 1
+label-occupied-font = 1
 label-occupied-foreground = ${colors.blue}
 
-label-empty = %icon%
+; label-empty = %icon%
 label-empty-padding = 1
+label-empty-font = 1
 label-empty-foreground = #bb222222
 
-label-urgent = %icon%
+; label-urgent = %icon%
 label-urgent-padding = 1
+label-urgent-font = 1
 label-urgent-foreground = ${colors.red}
 
 
